# iron-ledger-mono

./: README.md  pyproject.toml
apps/godot-client/modules/gathering/: export_presets.cfg  icon.svg.import  old_map_0.tscn  project.godot  tile_set_terrain_test.tres  tile_set_terrain_test.tscn
apps/godot-client/modules/gathering/assets/: Argent Pixel CF Regular.otf.import  Cute RPG - Waddlin' Away (Loopable).mp3.import  GS2_Item_Acquire_1.mp3.import  LoRes09PlusOT-WideBold.otf.import  Source Sans 3 Semibold.otf.import  Trajan Pro 3 Bold.otf.import  gather_icon.png.import  nav1_18px.png.import  nav2_22px.png.import  nav3_28px.png.import  tree_32x32.png.import  walker.png.import  worker_28x43.png.import
prototypes/: economy-gui-concept.py
prototypes/pygame-games/: blacksmithing.py  fishing.py  hauling.py  hauling_routes.py  mining.py  woodcutting.py
prototypes/pygame-games/logs/: blacksmithing_log.csv  hauling_records.csv
services/combat-engine/: action_registry.py  actions.json  arena_blueprints.py  attack.py  bootstrap.sh  engine_tick.py  fatigue_morale.py  health.py  movement_collision.py  pytest.ini
services/combat-engine/ecs/: __init__.py  components.py  entity.py  system.py  world.py
services/combat-engine/tests/: conftest.py  demo_damage.py  test_engine_tick.py
services/economy-sim/: __init__.py  data_structures.py  economy.py  entities.py  exp_and_professions_config.py  logger.py  main.py  market.py  resource_loader.py  settings.py  simulation.py  test_post.py
services/economy-sim/api/: __init__.py  api.py  loader.py  schemas.py  tool_calc.py
(+81 files in other folders)
